--- a/app/src/main/res/layout/activity_scrolling.xml
+++ b/app/src/main/res/layout/activity_scrolling.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.flashwifi.wifip2p.MainActivity"
+    tools:context="com.flashwifi.wifip2p.SearchActivity"
     android:id="@+id/main_view">
 
     <android.support.design.widget.AppBarLayout
