--- a/app/src/main/res/layout/fragment_fund_wallet.xml
+++ b/app/src/main/res/layout/fragment_fund_wallet.xml
@@ -1,81 +1,99 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.flashwifi.wifip2p.FundWalletFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.flashwifi.wifip2p.FundWalletFragment">
 
-    <TextView
-        android:id="@+id/FundWalletTitleLabel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#0A387F"
-        android:orientation="vertical"
-        android:paddingBottom="20dp"
-        android:paddingEnd="20dp"
-        android:paddingStart="20dp"
-        android:paddingTop="20dp"
-        android:text="@string/FundWalletAddressTitle"
-        android:textColor="#ffffff"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/AddressValue"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#0D47A1"
-        android:paddingBottom="20dp"
-        android:paddingEnd="20dp"
-        android:paddingStart="20dp"
-        android:paddingTop="20dp"
-        android:text="@string/FundWalletNoAddress"
-        android:textColor="#ffffff" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/FundWalletBalanceLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#0D47A1"
+            android:orientation="vertical"
+            android:paddingBottom="20dp"
+            android:paddingEnd="20dp"
+            android:paddingStart="20dp"
+            android:paddingTop="20dp"
+            android:text="@string/FundWalletBalance"
+            android:textColor="#ffffff"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/FundWalletBalanceValue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#0D47A1"
+            android:orientation="vertical"
+            android:paddingBottom="20dp"
+            android:paddingEnd="20dp"
+            android:paddingStart="40dp"
+            android:paddingTop="20dp"
+            android:text="0 i"
+            android:textColor="#ffffff"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#1365E5"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/FundWalletTitleLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#1365E5"
+            android:orientation="vertical"
+            android:paddingBottom="20dp"
+            android:paddingEnd="20dp"
+            android:paddingStart="20dp"
+            android:paddingTop="20dp"
+            android:text="@string/FundWalletAddressTitle"
+            android:textColor="#ffffff"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/AddressValue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#1365E5"
+            android:paddingBottom="20dp"
+            android:paddingEnd="20dp"
+            android:paddingStart="40dp"
+            android:paddingTop="20dp"
+            android:text=""
+            android:textColor="#ffffff" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#1365E5"
+        android:background="#1570FF"
         android:orientation="vertical">
 
-        <FrameLayout
+        <TextView
+            android:id="@+id/Temp"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight=".8">
-
-            <TextView
-                android:id="@+id/Temp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingStart="20dp"
-                android:text="QR CODE" />
-        </FrameLayout>
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight=".2">
-
-            <Button
-                android:id="@+id/floatingActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|left"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:background="#051c40"
-                android:clickable="true"
-                android:elevation="10dp"
-                android:src="@android:drawable/ic_input_add"
-                android:text="+"
-                android:textAlignment="center"
-                android:textColor="#ffffff"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:focusable="true"/>
-        </FrameLayout>
+            android:layout_height="wrap_content"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp"
+            android:text="QR CODE"
+            android:textColor="#ffffff" />
 
     </LinearLayout>
 
