--- a/app/src/main/res/layout/itemlistview.xml
+++ b/app/src/main/res/layout/itemlistview.xml
@@ -61,5 +61,26 @@
 
     </TableRow>
 
+    <TableRow
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:id="@+id/talkingRow">
+
+
+        <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="63dp"
+            android:layout_height="match_parent" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Stop Talking" />
+
+
+    </TableRow>
+
 
 </TableLayout>
