QR Scanner Stable - Non full screen
-WIP: noticing issues with the scanner when it is within the app frame, not full screen: doesn't scan very well
-Looking into full screen option

--- a/app/src/main/res/layout/fragment_withdraw_wallet.xml
+++ b/app/src/main/res/layout/fragment_withdraw_wallet.xml
@@ -98,7 +98,7 @@
             android:orientation="vertical">
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/editTextAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
