start and connect access point

--- a/app/src/main/res/layout/activity_roaming.xml
+++ b/app/src/main/res/layout/activity_roaming.xml
@@ -59,6 +59,7 @@
                 android:text="Flash channel" />
 
             <Button
+                android:id="@+id/stopRoamingButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="STOP"
