--- a/app/src/main/res/layout/itemlistview.xml
+++ b/app/src/main/res/layout/itemlistview.xml
@@ -1,86 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="wrap_content" android:orientation="vertical"
-    android:layout_width="fill_parent">
 
-    <TableRow android:layout_width="fill_parent"
-        android:id="@+id/TableRow01"
-        android:layout_height="wrap_content">
+<LinearLayout
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent">
 
-        <TextView android:textColor="#000000"
-            android:id="@+id/deviceName"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Device name"
-            android:textStyle="bold"
-            android:gravity="left"
-            android:layout_weight="1"
-            android:typeface="monospace"
-            android:height="40sp" />
-    </TableRow>
-
-    <TableRow android:layout_height="wrap_content"
-        android:layout_width="fill_parent">
-
-        <TextView android:textColor="#000000"
-            android:id="@+id/categoryId"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="macAddress"
-            android:layout_weight="1"
-            android:height="20sp" />
-
-        <TextView android:layout_height="wrap_content"
-            android:layout_width="fill_parent"
-            android:layout_weight="1"
-            android:textColor="#000000"
-            android:gravity="right"
-            android:id="@+id/description"
-            android:text="description"
-            android:height="20sp" />
-    </TableRow>
-    <TableRow android:layout_height="wrap_content"
-        android:layout_width="fill_parent">
-
-        <TextView android:textColor="#000000"
-            android:id="@+id/ipAddr"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="ipAddr"
-            android:layout_weight="1"
-            android:height="20sp" />
-
-        <TextView android:layout_height="wrap_content"
-            android:layout_width="fill_parent"
-            android:layout_weight="1"
-            android:textColor="#000000"
-            android:gravity="right"
-            android:id="@+id/iotaPrice"
-            android:text="iotaPrice"
-            android:height="20sp" />
-
-    </TableRow>
-
-    <TableRow
-        android:layout_width="fill_parent"
+    <android.support.v7.widget.CardView
+        android:id="@+id/ly_root"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
-        android:id="@+id/talkingRow">
+        android:background="#9f9e9e"
+        android:layout_margin="15dp"
+        app:cardCornerRadius="4dp"
+        android:padding="15dp"
+        android:listSelector="@drawable/listview_colours" >
 
-
-        <ProgressBar
-            style="?android:attr/progressBarStyle"
-            android:layout_width="63dp"
-            android:layout_height="match_parent" />
-
-        <Button
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Stop Talking" />
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_margin="15dp">
+
+                <TextView
+                    android:id="@+id/deviceName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:layout_marginRight="50dp"
+                    android:text="Device name"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
+
+                <TextView
+                    android:id="@+id/categoryId"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:text="macAddress"
+                    android:textColor="#000000" />
 
 
-    </TableRow>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginBottom="15dp"
+                >
+
+                <TextView android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:textColor="#000000"
+                    android:gravity="right"
+                    android:id="@+id/description"
+                    android:text="description"
+                    android:layout_marginRight="20dp"/>
+
+                <TextView android:textColor="#000000"
+                    android:id="@+id/ipAddr"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="ipAddr"
+                    android:layout_marginRight="20dp"/>
+
+                <TextView android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="1"
+                    android:textColor="#000000"
+                    android:id="@+id/iotaPrice"
+                    android:text="iotaPrice" />
 
 
-</TableLayout>
+            </LinearLayout>
+
+
+
+
+
+
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+    
+</LinearLayout>
+
