--- a/app/src/main/res/layout/itemlistview.xml
+++ b/app/src/main/res/layout/itemlistview.xml
@@ -34,7 +34,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left"
-                    android:layout_marginRight="50dp"
+                    android:layout_weight="1"
+                    android:layout_marginRight="20dp"
                     android:text="Device name"
                     android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
 
@@ -82,6 +83,15 @@
 
 
             </LinearLayout>
+
+            <ProgressBar
+                android:id="@+id/progressConnection"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:indeterminate="true"
+                android:visibility="gone"
+                />
 
 
 
