clean error codes fix #31

--- a/app/src/main/res/values/errorCodes.xml
+++ b/app/src/main/res/values/errorCodes.xml
@@ -16,4 +16,5 @@
     <string name="err_client_minutes_out_of_bounds">Client minutes is out of bounds</string>
     <string name="err_timeout">Timeout</string>
     <string name="err_io_exception">IO Exception</string>
+    <string name="err_peer_quit">Peer quit the conversation</string>
 </resources>
